--- a/k8s_sys_prereq.yml
+++ b/k8s_sys_prereq.yml
@@ -75,14 +75,14 @@
         msg: "Firewalld is {{ 'enabled' if firewalld_enabled.enabled == true else 'disabled' }} at boot"
 
     # --------------- Enable Required Kernel Modules --------------- #
-    - name: Persistently load required kernel modules
+    - name: Permanently load required kernel modules
       ansible.builtin.copy:
         dest: /etc/modules-load.d/k8s.conf
         content: |
-          # for k8s networking
-          overlay # enables an union mount filesystem used by container runtimes
-          br_netfilter # used by container runtimes bridge networking
-
+          # enables an union mount filesystem used by container runtimes
+          overlay
+          # used by container runtimes bridge networking
+          br_netfilter
           # for IPVS-based kube-proxy
           ip_vs
           ip_vs_rr
@@ -92,22 +92,28 @@
         group: root
         mode: '0644'
 
-    - name: Load kernel modules immediately
+    - name: Immediately load kernel modules
       ansible.builtin.command:
         cmd: modprobe "{{ item }}"
       loop: ['overlay', 'br_netfilter', 'ip_vs', 'ip_vs_rr', 'ip_vs_wrr', 'ip_vs_sh']
       changed_when: false
 
     # --------------- Sysctl to adjust the kernel parameters for IPV4/IPV6 ip bridge and ip forwarding --------------- #
-    # TODO - to set it up permanently
-    
-    - name: Enables sysctl IPV4/IPV6 networking params
+    - name: Permanently set Kubernetes sysctl parameters for ip bridge and forwarding
+      ansible.builtin.copy:
+        dest: /etc/sysctl.d/k8s.conf
+        content: |
+          net.bridge.bridge-nf-call-iptables = 1
+          net.bridge.bridge-nf-call-ip6tables = 1
+          net.ipv4.ip_forward = 1
+        owner: root
+        group: root
+        mode: '0644'
+
+    - name: Immediately enables sysctl parameters for ip bridge and forwarding
       ansible.posix.sysctl:
         name: "{{ item }}"
         value: '1'
         state: present
         reload: true
       loop: ['net.bridge.bridge-nf-call-iptables', 'net.bridge.bridge-nf-call-ip6tables', 'net.ipv4.ip_forward']
-
-
-
