--- a/k8s_sys_assert.yml
+++ b/k8s_sys_assert.yml
@@ -1,6 +1,7 @@
 ---
 
-- name: System verification for k8s set-up
+## ---------------------- Master and Worker Nodes ---------------------- ##
+- name: System verification for k8s set-up on all nodes
   hosts: master, workers
   gather_facts: false
   become: true
@@ -31,6 +32,20 @@
           - "selinux_mode.stdout == 'Permissive'"
         fail_msg: "Assertion Failed - SELinux is NOT set to Permissive"
         success_msg: "Assertion Passed - SELinux is set to Permissive"
+
+    # --------------- Verify if firewall ports are enabled --------------- #
+    - name: Get firewalld active ports
+      ansible.builtin.command: firewall-cmd --list-ports
+      register: fw_ports
+      changed_when: false
+
+    - name: Assert required ports are open on all nodes
+      ansible.builtin.assert:
+        that:
+          - "'10250/tcp' in fw_ports.stdout"
+          - "'30000-32767/tcp' in fw_ports.stdout"
+        fail_msg: "Assertion Failed - One or more required Kubernetes ports are not open in firewalld"
+        success_msg: "Assertion Passed - All required Kubernetes ports are open"
 
     # --------------- Verify if kernel modules are loaded --------------- #
     - name: Get list of loaded kernel modules
@@ -141,4 +156,22 @@
         fail_msg: "Assertion Failed - kubectl is NOT installed"
         success_msg: "Assertion Passed - kubectl is installed"
 
-  
+## ---------------------- Master Node ---------------------- ##
+- name: System verification for k8s set-up on Master nodes
+  hosts: master
+  gather_facts: false
+  become: true
+  tasks:
+    # --------------- Verify if firewall ports are enabled --------------- #
+    - name: Get firewalld active ports
+      ansible.builtin.command: firewall-cmd --list-ports
+      register: master_fw_ports
+      changed_when: false
+
+    - name: Assert required ports are open on all nodes
+      ansible.builtin.assert:
+        that:
+          - "'6443/tcp' in master_fw_ports.stdout"
+          - "'2379-2380/tcp' in master_fw_ports.stdout"
+        fail_msg: "Assertion Failed - One or more required Kubernetes ports are not open in firewalld on master node"
+        success_msg: "Assertion Passed - All required Kubernetes ports are open on master node"
