--- a/k8s_sys_prereq.yml
+++ b/k8s_sys_prereq.yml
@@ -1,6 +1,7 @@
 ---
 
-- name: Disable swap, set SELinux permissive and disable firewall
+## ---------------------- Master and Worker Nodes ---------------------- ##
+- name: Configurations for all nodes (master and worker)
   hosts: master, workers
   gather_facts: false
   become: true
@@ -33,34 +34,26 @@
         regexp: '^SELINUX='
         line: 'SELINUX=permissive'
 
-    # ---------------- Disable firewall ---------------- #
+    # ---------------- Open common ports for Kubelet API and NodePort Services ---------------- #
+    - name: Ensure firewalld is running and enabled on all nodes
+      ansible.builtin.service:
+        name: firewalld
+        state: started
+        enabled: true
 
-    # TODO: configure instead of disable all fw!
+    - name: Open common ports for Kubelet API and NodePort Services on all nodes
+      ansible.posix.firewalld:
+        port: "{{ item }}"
+        immediate: true
+        permanent: true
+        state: enabled
+      loop:
+        - 10250/tcp         # Kubelet API
+        - 30000-32767/tcp   # NodePort Services
 
-    # - name: Stop firewalld service
-    #   ansible.builtin.service:
-    #     name: firewalld
-    #     state: stopped
-
-    # - name: Disable firewalld service permanently
-    #   ansible.builtin.service:
-    #     name: firewalld
-    #     enabled: false
-    #   register: firewalld_enabled
-
-    # - name: Get firewalld service status
-    #   ansible.builtin.systemd:
-    #     name: firewalld
-    #     state: started
-    #   register: firewalld_status
-
-    # - name: Display whether firewalld is running
-    #   ansible.builtin.debug:
-    #     msg: "Firewalld is {{ 'running' if firewalld_status.status['ActiveState'] == 'active' else 'not running' }}"
-
-    # - name: Display whether firewalld is enabled at boot
-    #   ansible.builtin.debug:
-    #     msg: "Firewalld is {{ 'enabled' if firewalld_enabled.enabled == true else 'disabled' }} at boot"
+    - name: Reload firewalld
+      ansible.builtin.command: firewall-cmd --reload
+      changed_when: false
 
     # --------------- Enable Required Kernel Modules --------------- #
     - name: Permanently load required kernel modules
@@ -105,3 +98,23 @@
         state: present
         reload: true
       loop: ['net.bridge.bridge-nf-call-iptables', 'net.bridge.bridge-nf-call-ip6tables', 'net.ipv4.ip_forward']
+
+## ---------------------- Master Node ---------------------- ##
+- name: Configurations for Master node only
+  hosts: master
+  gather_facts: false
+  become: true
+  tasks:
+    # ------------ Open control-plane-only ports ------------- #
+    - name: Open control-plane-only ports
+      ansible.posix.firewalld:
+        port: "{{ item }}"
+        permanent: true
+        state: enabled
+      loop:
+        - 6443/tcp        # k8s API server
+        - 2379-2380/tcp   # etcd server client API
+
+    - name: Reload firewalld
+      ansible.builtin.command: firewall-cmd --reload
+      changed_when: false
