--- a/site.yml
+++ b/site.yml
@@ -14,3 +14,6 @@
 
 - name: K8s Cluster Creation Playbook
   ansible.builtin.import_playbook: k8s_instl_cluster.yml
+
+- name: K8s Cluster Assert Playbook
+  ansible.builtin.import_playbook: k8s_cluster_assert.yml
