add_repos playbook

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -3,12 +3,21 @@
 all:
   vars:
     ansible_user: iacuser
+    ansible_python_interpreter: '/usr/bin/python3.11'
     k8s_user: iacuser
     k8s_version: '1.28'
     crio_version: '1.28'
     os_stream: CentOS_9_Stream
     calico_version: '3.30.0'
-  
+
+    helm_repos:
+      - name: bitnami 
+        url: 'https://charts.bitnami.com/bitnami'
+      - name: prometheus-community
+        url: 'https://prometheus-community.github.io/helm-charts'
+      - name: grafana
+        url: 'https://grafana.github.io/helm-charts'
+      
   children:
     master:
       hosts:
