added install helm plugins playbook

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -18,6 +18,10 @@ all:
       - name: grafana
         url: 'https://grafana.github.io/helm-charts'
       
+    helm_plugins:
+      - name: helm-diff
+        url: 'https://github.com/databus23/helm-diff'
+  
   children:
     master:
       hosts:
