--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -22,6 +22,8 @@ all:
       - name: helm-diff
         url: 'https://github.com/databus23/helm-diff'
   
+    kubeconfig_path: '/home/{{ ansible_user }}/.kube/config'
+    
   children:
     master:
       hosts:
