added post_deploy.yml playbook (WIP)

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -22,8 +22,8 @@ all:
       - name: helm-diff
         url: 'https://github.com/databus23/helm-diff'
   
-    
     kubeconfig_path: '/home/{{ ansible_user }}/.kube/config'
+    k8s_namespace: 'my-test-namespace'
     
   children:
     master:
