--- a/playbooks/helm/site.yml
+++ b/playbooks/helm/site.yml
@@ -8,3 +8,6 @@
 
 - name: Enable auto-completion
   ansible.builtin.import_playbook: enable_autocompl.yml
+
+- name: Run a test chart deployment
+  ansible.builtin.import_playbook: test_helm.yml
