WIP: post_deployment.yml

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -24,6 +24,7 @@ all:
   
     kubeconfig_path: '/home/{{ ansible_user }}/.kube/config'
     k8s_namespace: 'my-test-namespace'
+    release_name: "my-nginx-nodeport"
     
   children:
     master:
