helm_chart role

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -21,10 +21,13 @@ all:
     helm_plugins:
       - name: helm-diff
         url: 'https://github.com/databus23/helm-diff'
-  
+
+    # helm_chart_ref: 'bitnami/nginx'
+    # helm_chart_version: 
+
     kubeconfig_path: '/home/{{ ansible_user }}/.kube/config'
-    k8s_namespace: 'my-test-namespace'
-    release_name: "my-nginx-nodeport"
+    # k8s_namespace: 'k8s-lab'
+    # release_name: "nginx-nodeport-lab"
     
   children:
     master:
@@ -33,4 +36,9 @@ all:
     workers:
       hosts:
         192.168.184.134:
+
+    # apps
+    nginx:
+      hosts: 
+        localhost  # ansible controller
 
