helm deployment playbooks for nginx and apache

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -39,6 +39,14 @@ all:
 
     # apps
     nginx:
-      hosts: 
-        localhost  # ansible controller
+      hosts:
+        nginx_host:
+          ansible_host: localhost
+        # localhost # ansible controller
+
+    apache:
+      hosts:
+        apache_host:
+          ansible_host: localhost
+        # localhost # ansible controller
 
