added install prometheus playkook

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -22,12 +22,9 @@ all:
       - name: helm-diff
         url: 'https://github.com/databus23/helm-diff'
 
-    # helm_chart_ref: 'bitnami/nginx'
-    # helm_chart_version: 
-
     kubeconfig_path: '/home/{{ ansible_user }}/.kube/config'
-    # k8s_namespace: 'k8s-lab'
-    # release_name: "nginx-nodeport-lab"
+    prometheus_version: '3.4.0'
+    prometheus_user: 'iacuser'
     
   children:
     master:
@@ -42,11 +39,10 @@ all:
       hosts:
         nginx_host:
           ansible_host: localhost
-        # localhost # ansible controller
 
     apache:
       hosts:
         apache_host:
           ansible_host: localhost
-        # localhost # ansible controller
+
 
