--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -23,17 +23,18 @@ all:
         url: 'https://github.com/databus23/helm-diff'
 
     kubeconfig_path: '/home/{{ ansible_user }}/.kube/config'
-    prometheus_version: '3.4.0'
-    prometheus_user: 'iacuser'
+    # prometheus_version: '3.4.0'
+    # prometheus_user: 'iacuser'
     
   children:
     master:
       hosts:
-        192.168.184.135:
+        # 192.168.184.135:
+        192.168.184.138:
     workers:
       hosts:
-        192.168.184.134:
-
+        # 192.168.184.134:
+        192.168.184.139:
     # apps
     nginx:
       hosts:
@@ -45,4 +46,8 @@ all:
         apache_host:
           ansible_host: localhost
 
+    mon_stack:
+      hosts:
+        mon_stack_host:
+          ansible_host: localhost
 
