--- a/playbooks/setup/k8s_instl_pkg.yml
+++ b/playbooks/setup/k8s_instl_pkg.yml
@@ -29,3 +29,8 @@
         name: kubelet
         enabled: true
         state: started
+
+    - name: Install Kubernetes Python client system-wide
+      ansible.builtin.pip:
+        name: kubernetes
+        executable: /usr/bin/pip3
