--- a/playbooks/setup/k8s_sys_prereq.yml
+++ b/playbooks/setup/k8s_sys_prereq.yml
@@ -35,25 +35,34 @@
         line: 'SELINUX=permissive'
 
     # ---------------- Open common ports for Kubelet API and NodePort Services ---------------- #
-    - name: Ensure firewalld is running and enabled on all nodes
-      ansible.builtin.service:
+    # - name: Ensure firewalld is running and enabled on all nodes
+    #   ansible.builtin.service:
+    #     name: firewalld
+    #     state: started
+    #     enabled: true
+
+    # - name: Open common ports for Kubelet API and NodePort Services on all nodes
+    #   ansible.posix.firewalld:
+    #     port: "{{ item }}"
+    #     immediate: true
+    #     permanent: true
+    #     state: enabled
+    #   loop:
+    #     - 10250/tcp         # Kubelet API
+    #     - 30000-32767/tcp   # NodePort Services
+    #     - 5473/tcp          # Calico nodes
+
+    # - name: Reload firewalld
+    #   ansible.builtin.command: firewall-cmd --reload
+    #   changed_when: false
+
+    # --------------- Disable frewall for all nodes (TODO: need to be restricted for Prod) --------------- #
+    - name: Stop, disable, and mask firewalld
+      ansible.builtin.systemd:
         name: firewalld
-        state: started
-        enabled: true
-
-    - name: Open common ports for Kubelet API and NodePort Services on all nodes
-      ansible.posix.firewalld:
-        port: "{{ item }}"
-        immediate: true
-        permanent: true
-        state: enabled
-      loop:
-        - 10250/tcp         # Kubelet API
-        - 30000-32767/tcp   # NodePort Services
-
-    - name: Reload firewalld
-      ansible.builtin.command: firewall-cmd --reload
-      changed_when: false
+        state: stopped
+        enabled: false
+        masked: true
 
     # --------------- Enable Required Kernel Modules --------------- #
     - name: Permanently load required kernel modules
@@ -100,21 +109,21 @@
       loop: ['net.bridge.bridge-nf-call-iptables', 'net.bridge.bridge-nf-call-ip6tables', 'net.ipv4.ip_forward']
 
 ## ---------------------- Master Node ---------------------- ##
-- name: Configurations for Master node only
-  hosts: master
-  gather_facts: false
-  become: true
-  tasks:
-    # ------------ Open control-plane-only ports ------------- #
-    - name: Open control-plane-only ports
-      ansible.posix.firewalld:
-        port: "{{ item }}"
-        permanent: true
-        state: enabled
-      loop:
-        - 6443/tcp        # k8s API server
-        - 2379-2380/tcp   # etcd server client API
+# - name: Configurations for Master node only
+#   hosts: master
+#   gather_facts: false
+#   become: true
+#   tasks:
+#     # ------------ Open control-plane-only ports ------------- #
+#     - name: Open control-plane-only ports
+#       ansible.posix.firewalld:
+#         port: "{{ item }}"
+#         permanent: true
+#         state: enabled
+#       loop:
+#         - 6443/tcp        # k8s API server
+#         - 2379-2380/tcp   # etcd server client API
 
-    - name: Reload firewalld
-      ansible.builtin.command: firewall-cmd --reload
-      changed_when: false
+#     - name: Reload firewalld
+#       ansible.builtin.command: firewall-cmd --reload
+#       changed_when: false
