--- a/roles/helm_chart/tasks/main.yml
+++ b/roles/helm_chart/tasks/main.yml
@@ -13,6 +13,7 @@
     kubeconfig: "{{ kubeconfig_path }}"
     update_repo_cache: true
     wait: true
+    timeout: "{{ helm_chart_timeout }}"
   register: helm_result
   notify: Post Deployment Tests
 
