enable prometheusOperator admissionWebhooks patch

--- a/inventory/group_vars/mon_stack.yml
+++ b/inventory/group_vars/mon_stack.yml
@@ -23,7 +23,7 @@ values:
     admissionWebhooks:
       enabled: true
       patch:
-        enabled: false
+        enabled: true
     podDnsConfig:
       enabled: true
       nameservers:
